# python

./: pyproject.toml
gerenciado_tarefas/: gerenciador.py
tests/: test_gerenciado_tarefas.py  test_gerenciador.py
